[package]
name = "reth-sequencer"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-rpc-types-engine = "1.0.42"
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", features = [ "client" ] }
tokio = { version = "1.48.0", features = ["full"] }
jsonrpsee = { version = "0.26.0", features = ["http-client",  "client", "jsonrpsee-proc-macros", "tracing", "server"] }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git" }
http = "1.3.1"
alloy-primitives = "1.4.1"
alloy-eips = "1.0.42"

